fix: resolve vertical misalignment

--- a/src/ui/src/components/visualizer/expandable_info_text.scss
+++ b/src/ui/src/components/visualizer/expandable_info_text.scss
@@ -28,12 +28,10 @@
 .override-status {
   --override-status-color: transparent;
 
-  & mat-icon {
-    font-size: 1rem;
-    width: 1rem;
-    height: 1rem;
-    color: var(--override-status-color);
-  }
+  font-size: 1rem;
+  width: 1rem;
+  height: 1rem;
+  color: var(--override-status-color);
 
   &.override-uploaded { --override-status-color: seagreen; }
   &.has-override { --override-status-color: goldenrod; }
